[gd_scene load_steps=2 format=2]

[ext_resource path="res://GraphNetwork/HustleGraph.gd" type="Script" id=2]

[node name="HustleGraph" type="GraphEdit"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
use_snap = false
minimap_size = Vector2( 100, 75 )
script = ExtResource( 2 )

[connection signal="connection_request" from="." to="." method="_on_HustleGraph_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_HustleGraph_disconnection_request"]
